--- a/load_analysis_slides.Rmd
+++ b/load_analysis_slides.Rmd
@@ -2,10 +2,7 @@
 title: "Page Load Analysis"
 author: "progressive-web-metrics@chromium.org"
 date: "September 6, 2017"
-output: 
-  html_document:
-    fig_width: 12
-    fig_height: 8
+output: ioslides_presentation
 ---
 
 ```{r setup, include=FALSE}
@@ -16,7 +13,8 @@ source('main.R')
 ## Overall Distributions
 
 ```{r, echo=FALSE, warning=FALSE}
-plot_totals_violin  
+plot_totals_violin +
+  theme(strip.text.x = element_text(size = 6))
 ```
 
 ## Time To Consistently Interactive
@@ -26,11 +24,13 @@ Means, warm vs cold.
 ggplotly(plot_ci_warm_vs_cold, tooltip="text")
 ```
 
+## Quantiles
 Quantiles.
 ```{r echo=FALSE, warning=FALSE}
 ggplotly(plot_ci, tooltip = "text")
 ```
 
+## Normalized by quantiles
 Normalized, by quantiles.
 ```{r echo=FALSE, warning=FALSE}
 ggplotly(plot_ci_normalized, tooltip="text")
