Slides blocked on better data

--- a/load_analysis_slides.Rmd
+++ b/load_analysis_slides.Rmd
@@ -49,3 +49,7 @@ ggplotly(plot_ci_normalized, tooltip="text")
 ```{r echo=FALSE, warning=FALSE}
 ggplotly(plot_important_times, tooltip="text")
 ```
+
+## Next Steps
+* Eliminate other.
+* Repeat for non-page load?
