--- a/load_analysis.Rmd
+++ b/load_analysis.Rmd
@@ -4,8 +4,8 @@ author: "tdresser@chromium.org, maxlg@chromium.org, dproy@chromium.org"
 date: "December 18, 2017"
 output: 
   html_document:
-    fig_width: 10
-    fig_height: 7
+    fig_width: 12
+    fig_height: 10
 ---
 
 ```{r setup, include=FALSE}
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo = TRUE, warning=FALSE)
 options(scipen=10000)
 knitr::opts_knit$set(verbose=TRUE)
 source('main.R')
-source('per_second.R')
+#source('per_second.R')
 ```
 
 ## Gathering Data
@@ -88,6 +88,6 @@ ggplotly(plot_important_times +
 
 ## Per Second Contributors
 ```{r echo=FALSE, warning=FALSE}
-ggplotly(plot_per_second, tooltip="text")
+# ggplotly(plot_per_second, tooltip="text")
 ```
 
